# pypypy

./: .gitignore  Makefile  README.md  a.out  pyproject.toml  setup.cfg  test1.c
project_func/: cli.py
project_func/scripts/: database.py  database_crud.py  database_dec.py  engine.py  main_base.py
